packages/frontend/src/components/Header/Header.module.css
.header {
  border-bottom: 2px solid var(--light-gray);
}

.headerWrapper {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  max-width: 320px;
  min-height: 44px;
  margin: 0 auto;
  padding: 18px 20px;
}

.userInfo {
  display: flex;
  align-items: center;
  gap: 15px;
  font-family: inherit;
  font-size: 14px;
}

.userName {
  color: var(--dark-gray);
  font-weight: 700;
}

.userSeparator {
  background-color: var(--light-gray);

  width: 2px;
  height: 32px;

  display: block;
}

.exitBtn {
  background: transparent;
  border: none;
  color: var(--light-gray);
  font-weight: 700;
  cursor: pointer;
  padding: 0;
  font-size: 14px;
  transition: color 0.3s;
}

.exitBtn:hover {
  color: var(--dark-gray);
}

.mobileUserBar {
  background-color: #eff1f3;
  width: 100%;
  height: 40px;

  display: flex;
  justify-content: center;
}

.mobileUserContent {
  width: 100%;
  max-width: 320px;
  height: 100%;

  display: flex;
  align-items: center;
  justify-content: flex-end;

  padding-right: 20px;
  padding-left: 20px;
  box-sizing: border-box;
}

.desktopUserBar {
  display: none;
}

.authNav {
  display: flex;
  gap: 14px;
}

.logoContainer {
  display: flex;
  align-items: center;
  gap: 8px;
  text-decoration: none;
}

.logoIcon {
  width: 46px;
  height: 44px;
}

.logoText {
  width: 95px;
  height: 16px;
  transition: opacity 0.3s ease;
}

.logoTextSignedOut {
  display: none;
}

.hamburgerBtn {
  display: block;
  cursor: pointer;
  z-index: 20;
}

.headerRightSide {
  display: flex;
  align-items: center;
}

.desktopNav {
  display: none;
}

.mobileMenuOverlay {
  position: absolute;
  top: 80px;
  left: 0;
  height: 100vh;
  width: 100%;
  background-color: var(--steel-blue);
  padding: 100px 0;
  text-align: center;
  z-index: 10;
}

.mobileMenuContent {
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.logoSeparator {
  display: none;
}

@media (min-width: 768px) {
  .headerWrapper {
    max-width: 704px;
    padding: 20px 0;
    height: auto;
  }

  .mobileUserBar {
    display: none;
  }

  .desktopUserBar {
    display: flex;
    margin-right: 30px;
  }

  .logoTextSignedOut {
    display: flex;
  }

  .logoContainer {
    gap: 10px;
  }

  .logoText {
    width: 100px;
  }

  .spacer {
    display: flex;
    align-items: center;
  }
}

@media (min-width: 1280px) {
  .header {
    border-bottom: none;
    background-color: transparent;
    padding-top: 80px;
    width: 100%;
    z-index: 50;
  }

  .headerWrapper {
    max-width: 1280px;
    padding: 0 16px;
    justify-content: flex-start;
    align-items: end;
  }

  .logoContainer {
    display: flex;
    align-items: end;
    gap: 0;
  }

  .headerRightSide {
    width: 100%;
    justify-content: space-between;
    padding-left: 20px;
    border-left: 2px solid var(--light-gray);
    height: 32px;
    align-items: flex-end;
  }

  .hamburgerBtn {
    display: none;
  }

  .desktopNav {
    display: flex;
    gap: 20px;
  }

  .desktopUserBar {
    display: flex;
    margin-right: 0;
    justify-content: end;
  }

  .headerRightSide {
    display: flex;
    justify-content: space-between;
    width: 100%;
    align-items: center;
  }
  .headerText {
    display: flex;
    align-items: end;
  }

  .userSeparator {
    display: flex;
    align-items: end;
  }
  .userInfo {
    margin-left: 629px;
    align-items: end;
  }

  .logoSeparator {
    display: block;
    width: 2px;
    height: 32px;
    background-color: var(--light-gray);

    margin-left: 20px;
    margin-right: 20px;

    align-self: end;
  }
}

